--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>test-apps</artifactId>
         <groupId>org.jberet.test-apps</groupId>
-        <version>1.3.0.Beta5</version>
+        <version>1.3.0.Beta6-SNAPSHOT</version>
     </parent>
 
     <artifactId>simple</artifactId>
